Prevent the percent saved text from wrapping
This won't ever overlap the other content, so nowrap is fine

--- a/app/design/frontend/Travers/default/Magento_Checkout/styles/module/_cart.scss
+++ b/app/design/frontend/Travers/default/Magento_Checkout/styles/module/_cart.scss
@@ -260,6 +260,10 @@ $cart-image-mobile-width: 60px !default;
                 @include lib-visually-hidden();
             }
         }
+
+        &.price .percent-saved {
+            white-space: nowrap;
+        }
     }
 
     .product-image-container {
